<resources>
    <string name="app_name">Registro_Jornada_Android</string>
    <string name="hintEmail">Email</string>
    <string name="hintPass">Password</string>
    <string name="log_in">Log In</string>
    <string name="securitylogin">SecurityLogin</string>
    <string name="login">Log In</string>
    <string name="olvid_su_contrase_a">¿Olvidó su contraseña?</string>
    <string name="entrada">ENTRADA</string>
    <string name="fecha">FECHA</string>
    <string name="salida">SALIDA</string>
    <string name="nota">NOTA</string>
    <string name="botonContinuar">Continuar</string>
    <string name="hintEmailOlvido" />
    <string name="candadoapp">candadoapp</string>
</resources>