<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".Login">

    <TextView
        android:id="@+id/titulo"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="126dp"
        android:text="@string/securitylogin"
        android:textSize="46sp"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent" />

    <com.google.android.material.textfield.TextInputLayout
        android:id="@+id/LayoutEmail"
        android:layout_width="279dp"
        android:layout_height="57dp"
        android:layout_marginTop="182dp"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/titulo">

        <com.google.android.material.textfield.TextInputEditText
            android:id="@+id/boxEmail"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:hint="@string/hintEmail"
            android:textColor="@color/blue"
            android:textSize="18sp" />
        <requestFocus/>
    </com.google.android.material.textfield.TextInputLayout>

    <com.google.android.material.textfield.TextInputLayout
        android:id="@+id/textInputLayout"
        android:layout_width="279dp"
        android:layout_height="57dp"
        android:layout_marginTop="22dp"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/LayoutEmail">

        <com.google.android.material.textfield.TextInputEditText
            android:id="@+id/boxPass"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:hint="@string/hintPass"
            android:inputType="textPassword"
            android:textColor="@color/blue"
            android:textSize="18sp" />
    </com.google.android.material.textfield.TextInputLayout>

    <Button
        android:id="@+id/buttonLogin"
        android:layout_width="223dp"
        android:layout_height="52dp"
        android:layout_marginTop="88dp"
        android:backgroundTint="@color/red"
        android:text="@string/login"
        android:textColor="@color/white"
        android:textSize="16sp"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/textInputLayout" />

    <TextView
        android:id="@+id/olvido"
        android:layout_width="262dp"
        android:layout_height="38dp"
        android:layout_marginTop="40dp"
        android:gravity="center"
        android:clickable="true"
        android:text="@string/olvid_su_contrase_a"
        android:backgroundTint="@color/white"
        android:textColor="@color/blue"
        android:textSize="18sp"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.496"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/textInputLayout" />


</androidx.constraintlayout.widget.ConstraintLayout>