<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".PassOlvido">

    <com.google.android.material.textfield.TextInputLayout
        android:id="@+id/layoutEmail"
        android:layout_width="330dp"
        android:layout_height="55dp"
        android:layout_marginBottom="72dp"
        app:hintTextColor="@color/blue"
        app:layout_constraintBottom_toTopOf="@+id/botonContinuar"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent">

        <com.google.android.material.textfield.TextInputEditText
            android:id="@+id/usuario"
            android:layout_width="330dp"
            android:layout_height="wrap_content"
            android:backgroundTint="@color/white"
            android:drawableStart="@android:drawable/ic_dialog_email"
            android:hint="@string/hintEmailOlvido"
            android:textColor="@color/black"
            android:textColorHint="@color/blue"
            android:textSize="16sp"
            tools:ignore="TextContrastCheck,SpeakableTextPresentCheck" />

        <requestFocus />
    </com.google.android.material.textfield.TextInputLayout>

    <Button
        android:id="@+id/botonContinuar"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginBottom="100dp"
        android:backgroundTint="@color/red"
        android:contentDescription="@string/botonContinuar"
        android:text="@string/botonContinuar"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        tools:ignore="SpeakableTextPresentCheck" />

    <ImageView
        android:id="@+id/imagenCandado"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:contentDescription="@string/candadoapp"
        app:layout_constraintBottom_toTopOf="@+id/layoutEmail"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        app:srcCompat="@drawable/candado" />

    <androidx.appcompat.widget.Toolbar
        android:id="@+id/toolbarOlvidoPass"
        android:layout_width="409dp"
        android:layout_height="wrap_content"
        android:background="?attr/colorPrimary"
        android:minHeight="?attr/actionBarSize"
        android:theme="?attr/actionBarTheme"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent" />

</androidx.constraintlayout.widget.ConstraintLayout>